err/slapcache.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iniparse'...
Compiling './lib/python3.5/site-packages/iniparse/compat.py'...
***   File "./lib/python3.5/site-packages/iniparse/compat.py", line 59
    raise ValueError, 'Invalid section name: %s' % section
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iniparse-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slapcache'...
Compiling './lib/python3.5/site-packages/slapcache/conf.py'...
***   File "./lib/python3.5/site-packages/slapcache/conf.py", line 85
    def create(path, text=None, mode=0666):
                                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/slapcache/signature.py'...
***   File "./lib/python3.5/site-packages/slapcache/signature.py", line 164
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slapcache/template'...
Listing './lib/python3.5/site-packages/slapcache/test'...
Listing './lib/python3.5/site-packages/slapcache-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/slapos'...
Listing './lib/python3.5/site-packages/slapos.libnetworkcache-0.15.egg-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/iniparse-0.4'...
Listing './share/python-wheels'...
